# NeuralNetworksMnistCPP

./: .gitignore  CMakeLists.txt  build.sh  mnist.sh  read_dataset_images.sh  read_dataset_labels.sh
src/: CrossEntropyLoss.hpp  FullyConnected.hpp  NeuralNetwork.hpp  ReadASingleFile.cpp  Relu.hpp  Softmax.hpp  data.cpp  data.hpp  labels.hpp  test_data.cpp  test_fully_connected.cpp  test_labels.cpp  test_neural_network.cpp  test_single_image.cpp  test_single_label.cpp
